# whist-hs

./: whist.cabal
app/: Main.hs
src/: Card.hs  Deck.hs  Lib.hs  Score.hs
