name:                whist
version:             0.1.0.0
synopsis:            Whist logic
description:         Please see README.md
homepage:            https://github.com/hmac/whist-hs
license:             BSD3
license-file:        LICENSE
author:              Harry Maclean
maintainer:          harryjmaclean@gmail.com
copyright:           2016 Harry Maclean
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Card
  build-depends:       base >= 4.7 && < 5
                     , aeson
  default-language:    Haskell2010

executable whist-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , whist
                     , scotty
                     , mtl
                     , text
                     , aeson
  default-language:    Haskell2010

test-suite whist-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , whist
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hmac/whist-hs
